# motor_sim

./: .gitignore  CMakeLists.txt  README.md  build.sh  mock_motor_hardware_interface_plugin.xml  package.xml
config/: controllers.yaml  motor_config.yaml  view_robot.rviz
examples/: basic_control.cpp  multi_motor.cpp  position_tracking.cpp  simple_demo.cpp
include/driver/: FeetechActuator.hpp  MotorSimulator.hpp  MotorState.hpp
include/protocol/: FeetechProtocol.hpp  ProtocolPacket.hpp
include/ros2/: MockMotorHardwareInterface.hpp
include/transport/: ITransport.hpp  MockSerialBuffer.hpp
include/utils/: Checksum.hpp  CircularBuffer.hpp  Logger.hpp
launch/: mock_motor_control.launch.py
src/driver/: FeetechActuator.cpp  MotorSimulator.cpp  MotorState.cpp
src/protocol/: FeetechProtocol.cpp  ProtocolPacket.cpp
src/ros2/: MockMotorHardwareInterface.cpp
src/transport/: MockSerialBuffer.cpp
src/utils/: Checksum.cpp  Logger.cpp
tests/unit/: test_circular_buffer.cpp  test_mock_serial.cpp  test_motor_simulator.cpp  test_protocol.cpp
urdf/: mock_motor_robot.urdf.xacro
